--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "climatewall",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "private": true,
     "homepage": "climatewall/",
     "dependencies": {
@@ -15,6 +15,7 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
         "sass": "^1.69.5",
         "web-vitals": "^2.1.4"
     },
